<resources>
    <string name="app_name">AndroidLabs2</string>
    <string name="first_number">First number</string>
    <string name="second_number">Second number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">:</string>
    <string name="calculate">CALCULATE</string>
    <string name="result">  Result</string>
    <string name="save">Save</string>
    <string name="history">History</string>
    <string name="first_fragment_label"></string>
    <string name="second_fragment_label"></string>
    <string name="back">BACK</string>
</resources>