<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstNumber"
            android:layout_width="200dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#59595A"
            android:ems="10"
            android:hint="@string/first_number"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/secondNumber"
            android:layout_width="200dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="#59595A"
            android:ems="10"
            android:hint="@string/second_number"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/operation"
        android:layout_width="match_parent"
        android:layout_height="336dp"
        android:layout_marginTop="5dp">


        <RadioButton
            android:id="@+id/plus"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="#2d2d2c"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#8D8C8C"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="58sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/minus"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="#2d2d2c"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="46sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/multiply"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="#2d2d2c"
            android:text="@string/multiply"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="46sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="#2d2d2c"
            android:text="@string/divide"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#f2a33c"
        android:text="@string/calculate"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#F2A33C" />
</LinearLayout>

